add data-keluarga, data-pribadi (nyangkut)

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
     </div>
   </nav>
   <span class="flex bg-white mx-3.85 mt-3.75 justify-between">
+    <a href="../public/pribadi-nyangkut.html" class="block font-mulish-normal text-12px font-semibold">Data Pribadi (Dropdown Nyangkut)</a>
+  </span>
+  <span class="flex bg-white mx-3.85 mt-3.75 justify-between">
     <a href="../public/pribadi.html" class="block font-mulish-normal text-12px font-semibold">Data Pribadi</a>
   </span>
   <span class="flex bg-white mx-3.85 mt-3.75 justify-between">
