--- a/public/keluarga.html
+++ b/public/keluarga.html
@@ -22,13 +22,53 @@
       <span class="flex ml-5 mt-2.3">
         <p href="#" class="block font-mulish-normal text-12px font-semibold">Suami</p>
       </span>
-      <div class="block container mt-1.4 justify-center">
-        <div class="float-left w-9 h-9 rounded-full ml-5 flex justify-center items-center bg-chateau-green-500">
+      <div class="flex mt-2">
+        <div class="w-auto h-auto">
+          <div class="w-9 h-9 rounded-full ml-5 flex justify-center items-center bg-chateau-green-500">
             <p>T</p>
+          </div>
         </div>
-        <p class="ml-3.75 mt-3.5 font-mulish-normal font-normal text-12px text-gunsmoke-500 justify-center">
+        <div class="container border-b-0.5 border-alto-500 mx-3.75">
+          <p class="block font-mulish-normal font-normal text-12px text-gunsmoke-500 mt-3.5">
             Teguh Wirawan
-        </p>
+          </p>
+        </div>  
       </div>
+
+      <span class="flex ml-5 mt-2.3">
+        <p href="#" class="block font-mulish-normal text-12px font-semibold">Anak</p>
+      </span>
+      <div class="flex mt-2">
+        <div class="w-auto h-auto">
+          <div class="w-9 h-9 rounded-full ml-5 flex justify-center items-center bg-chateau-green-500">
+            <p>A</p>
+          </div>
+        </div>
+        <div class="container border-b-0.5 border-alto-500 mx-3.75">
+          <p class="block font-mulish-normal font-normal text-12px text-gunsmoke-500 mt-3.5">
+            Aulia Farzana Wirawan
+          </p>
+        </div>  
+      </div>
+
+      <span class="flex ml-5 mt-2.3">
+        <p href="#" class="block font-mulish-normal text-12px font-semibold">Orang Tua</p>
+      </span>
+      <div class="flex mt-2">
+        <div class="w-auto h-auto">
+          <div class="w-9 h-9 rounded-full ml-5 flex justify-center items-center bg-chateau-green-500">
+            <p>L</p>
+          </div>
+        </div>
+        <div class="container border-b-0.5 border-alto-500 mx-3.75">
+          <p class="block font-mulish-normal font-normal text-12px text-gunsmoke-500 mt-3.5">
+            Lutfi Abbad, S.H
+          </p>
+        </div>  
+      </div>
+
+      <div class="relative">
+        <button class="absolute w-9 h-9 bottom-0 right-0 bg-chateau-green-500 text-white text-4xl rounded-full hover:bg-chateau-green-700 content-center">+</button>
+      </div>      
 </body>
 </html>
