--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/frontend-task/public/build/tailwind.css">
+  <link rel="stylesheet" href="../public/build/tailwind.css">
   <title>Index</title>
 </head>
 
