--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../public/build/tailwind.css">
+  <link type="text/html" href="build/tawind.css">
   <title>Index</title>
 </head>
 
@@ -13,7 +13,7 @@
   <nav class="flex items-center justify-between p-5 bg-chateau-green-500">
     <div class="flex items-center">
       <button>
-        <img src="../public/img/Arrow.png" alt="arrow">
+        <img src="img/Arrow.png" alt="arrow">
       </button>
       <p href="#" class="text-base block text-white ml-5 font-mulish-normal">
         Index
@@ -21,18 +21,18 @@
     </div>
     <div class="block">
       <button class="flex py-3 w-6">
-        <img src="../public/img/edit_icon.png" class="w-6" alt="edit_icon">
+        <img src="img/edit_icon.png" class="w-6" alt="edit_icon">
       </button>
     </div>
   </nav>
   <span class="flex bg-white mx-3.85 mt-3.75 justify-between">
-    <a href="../public/pribadi-nyangkut.html" class="block font-mulish-normal text-12px font-semibold">Data Pribadi (Dropdown Nyangkut)</a>
+    <a href="pribadi-nyangkut.html" class="block font-mulish-normal text-12px font-semibold">Data Pribadi (Dropdown Nyangkut)</a>
   </span>
   <span class="flex bg-white mx-3.85 mt-3.75 justify-between">
-    <a href="../public/pribadi.html" class="block font-mulish-normal text-12px font-semibold">Data Pribadi</a>
+    <a href="pribadi.html" class="block font-mulish-normal text-12px font-semibold">Data Pribadi</a>
   </span>
   <span class="flex bg-white mx-3.85 mt-3.75 justify-between">
-    <a href="../public/keluarga.html" class="block font-mulish-normal text-12px font-semibold">Data Keluarga</a>
+    <a href="keluarga.html" class="block font-mulish-normal text-12px font-semibold">Data Keluarga</a>
   </span>
 
 
