--- a/public/pribadi-nyangkut.html
+++ b/public/pribadi-nyangkut.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../public/build/tailwind.css">
-  <script src="../public/js/script.js"></script>
+  <link rel="stylesheet" href="build/tailwind.css">
+  <script src="js/script.js"></script>
   <title>Data Diri</title>
 </head>
 
@@ -14,7 +14,7 @@
   <nav class="flex items-center justify-between p-5 bg-chateau-green-500">
     <div class="flex items-center">
       <button>
-        <img src="../public/img/Arrow.png" alt="arrow">
+        <img src="img/Arrow.png" alt="arrow">
       </button>
       <p href="#" class="text-base block text-white ml-5 font-mulish-normal">
         Data Diri
@@ -22,14 +22,14 @@
     </div>
     <div class="block">
       <button class="flex py-3 w-6">
-        <img src="../public/img/edit_icon.png" class="w-6" alt="edit_icon">
+        <img src="img/edit_icon.png" class="w-6" alt="edit_icon">
       </button>
     </div>
   </nav>
   <span class="flex bg-white mx-3.85 mt-3.75 justify-between">
     <p href="#" class="block font-mulish-normal text-12px font-semibold">Personal</p>
     <button class="dropdown-btn">
-      <img src="../public/img/ic_arrow_down.png" alt="ic_arrow_down">
+      <img src="img/ic_arrow_down.png" alt="ic_arrow_down">
     </button>
   </span>
   <div class="bg-white mx-3.85 mt-1.4 overflow-y-dropdown-contents">
@@ -104,7 +104,7 @@
       <li>
         <div class="block container mx-auto pt-1.4">
           <button class="float-right">
-            <img src="../public/img/ic_search.png" alt="ic_search">
+            <img src="img/ic_search.png" alt="ic_search">
           </button>
           <p href="#" class="block mt-3.75 mb-1.4 font-mulish-normal font-normal text-12px text-gunsmoke-500">Nomor
             KK</p>
@@ -115,7 +115,7 @@
       <li>
         <div class="block container mx-auto pt-1.4">
           <button class="float-right">
-            <img src="../public/img/ic_search.png" alt="ic_search">
+            <img src="img/ic_search.png" alt="ic_search">
           </button>
           <p href="#" class="block mt-3.75 mb-1.4 font-mulish-normal font-normal text-12px text-gunsmoke-500">Nomor
             KTP</p>
@@ -126,7 +126,7 @@
       <li>
         <div class="block container mx-auto pt-1.4">
           <button class="float-right">
-            <img src="../public/img/ic_search.png" alt="ic_search">
+            <img src="img/ic_search.png" alt="ic_search">
           </button>
           <p href="#" class="block mt-3.75 mb-1.4 font-mulish-normal font-normal text-12px text-gunsmoke-500">Nomor
             NPWP</p>
@@ -180,7 +180,7 @@
     <span class="flex bg-white mr-auto mt-3.75 justify-between">
       <p href="#" class="block font-mulish-normal text-12px font-semibold">Kontak</p>
       <button class="dropdown-btn">
-        <img src="../public/img/ic_arrow_down.png" alt="ic_arrow_down">
+        <img src="img/ic_arrow_down.png" alt="ic_arrow_down">
       </button>
     </span>
     <ul class="absolute dropdown-contents collapse">
@@ -241,14 +241,14 @@
       <p href="#" class="block font-mulish-normal text-12px font-semibold">Pendidikan</p>
       <p href="#" class="font-mulish-normal text-12px opacity-50">(2)</p>
       <button class="dropdown-btn">
-        <img src="../public/img/ic_arrow_down.png" alt="ic_arrow_down">
+        <img src="img/ic_arrow_down.png" alt="ic_arrow_down">
       </button>
     </span>
     <ul class="absolute dropdown-contents collapse">
       <li>
         <div class="flex space-x-4 bg-white mr-auto mt-3.75 justify-between border-b-0.5 border-alto-500">
           <button class="float-left w-9.5">
-            <img src="../public/img/ic_pendidikan.png" alt="ic_pendidikan">
+            <img src="img/ic_pendidikan.png" alt="ic_pendidikan">
           </button>
           <div class="container mx-auto pt-1.4">
             <p href="#" class="block font-mulish-normal text-12px font-semibold text-fuscous-gray-500 mt-4.5">Strata-1
@@ -257,14 +257,14 @@
               2008</p>
           </div>
           <button class="float-right">
-            <img src="../public/img/ic_arrow_green.png" alt="ic_arrow_green" class="mr-7.5">
+            <img src="img/ic_arrow_green.png" alt="ic_arrow_green" class="mr-7.5">
           </button>
         </div>
       </li>
       <li>
         <div class="flex space-x-4 bg-white mr-auto mt-3.75 justify-between border-b-0.5 border-alto-500">
           <button class="float-left w-9.5">
-            <img src="../public/img/ic_pendidikan.png" alt="ic_pendidikan">
+            <img src="img/ic_pendidikan.png" alt="ic_pendidikan">
           </button>
           <div class="container mx-auto pt-1.4">
             <p href="#" class="block font-mulish-normal text-12px font-semibold text-fuscous-gray-500 mt-4.5">SMA</p>
@@ -272,7 +272,7 @@
               2003</p>
           </div>
           <button class="float-right">
-            <img src="../public/img/ic_arrow_green.png" alt="ic_arrow_green" class="mr-7.5">
+            <img src="img/ic_arrow_green.png" alt="ic_arrow_green" class="mr-7.5">
           </button>
         </div>
       </li>
@@ -280,7 +280,7 @@
     <span class="flex bg-white mr-auto mt-3.75 justify-between">
       <p href="#" class="block font-mulish-normal text-12px font-semibold">Data Perkiraan Pensiun</p>
       <button class="dropdown-btn">
-        <img src="../public/img/ic_arrow_down.png" alt="ic_arrow_down">
+        <img src="img/ic_arrow_down.png" alt="ic_arrow_down">
       </button>
     </span>
     <ul class="absolute dropdown-contents collapse">
