--- a/public/keluarga.html
+++ b/public/keluarga.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/build/tailwind.css">
+    <link rel="stylesheet" href="build/tailwind.css">
     <title>Data Keluarga</title>
 </head>
 <body>
     <nav class="flex items-center justify-between p-5 bg-chateau-green-500">
         <div class="flex items-center">
           <button>
-            <img src="../public/img/Arrow.png" alt="arrow">
+            <img src="img/Arrow.png" alt="arrow">
           </button>
           <a href="#" class="text-base block text-white ml-5 font-mulish-normal">
               Keluarga
