--- a/public/pribadi.html
+++ b/public/pribadi.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/build/tailwind.css">
+    <link rel="stylesheet" href="build/tailwind.css">
     <title>Data Diri</title>
 </head>
 <body>
     <nav class="flex items-center justify-between p-5 bg-chateau-green-500">
         <div class="flex items-center">
           <button>
-            <img src="../public/img/Arrow.png" alt="arrow">
+            <img src="img/Arrow.png" alt="arrow">
           </button>
           <p class="text-base block text-white ml-5 font-mulish-normal">
               Data Diri
@@ -19,14 +19,14 @@
         </div>
         <div class="block">
           <button class="flex py-3 w-6">
-            <img src="../public/img/edit_icon.png" class="w-6" alt="edit_icon">
+            <img src="img/edit_icon.png" class="w-6" alt="edit_icon">
           </button>
         </div>
       </nav>
       <div class="flex bg-white mx-3.85 mt-3.75 justify-between">
         <p  class="block font-mulish-normal text-12px font-bold">Personal</p>
         <button class="float-right">
-          <img src="../public/img/Arrow2.png" alt="arrow2">
+          <img src="img/Arrow2.png" alt="arrow2">
         </button>
       </div>
       <div class="bg-white mx-3.85 mt-3.75 overflow-y-hidden">
@@ -65,21 +65,21 @@
         <!-- TODO : add logo -->
         <div class="block container mx-auto pt-1.4">
           <button class="float-right">
-            <img src="../public/img/ic_search.png" alt="ic_search">
+            <img src="img/ic_search.png" alt="ic_search">
           </button>
           <p  class="block mt-3.75 mb-1.4 font-mulish-normal font-normal text-12px text-gunsmoke-500">Nomor KK</p>
           <p  class="border-b-0.5 border-alto-500 block mb-3.75 font-mulish-normal font-semibold text-14px text-fuscous-gray-500">3374025304850002</p>  
         </div>
         <div class="block container mx-auto pt-1.4">
           <button class="float-right">
-            <img src="../public/img/ic_search.png" alt="ic_search">
+            <img src="img/ic_search.png" alt="ic_search">
           </button>
           <p  class="block mt-3.75 mb-1.4 font-mulish-normal font-normal text-12px text-gunsmoke-500">Nomor KTP</p>
           <p  class="border-b-0.5 border-alto-500 block mb-3.75 font-mulish-normal font-semibold text-14px text-white">111111111</p>  
         </div>
         <div class="block container mx-auto pt-1.4">
           <button class="float-right">
-            <img src="../public/img/ic_search.png" alt="ic_search">
+            <img src="img/ic_search.png" alt="ic_search">
           </button>
           <p  class="block mt-3.75 mb-1.4 font-mulish-normal font-normal text-12px text-gunsmoke-500">Nomor NPWP</p>
           <p  class="border-b-0.5 border-alto-500 block mb-3.75 font-mulish-normal font-semibold text-14px text-fuscous-gray-500">59.445.782.2-504.000</p>  
@@ -113,7 +113,7 @@
         <div class="flex bg-white mx-auto mt-3.75 justify-between">
             <p  class="block font-mulish-normal text-12px font-bold">Kontak</p>
             <button class="float-right">
-              <img src="../public/img/Arrow2.png" alt="arrow2">
+              <img src="img/Arrow2.png" alt="arrow2">
             </button>
           </div>
           <div class="container mx-auto pt-1.4">
@@ -160,12 +160,12 @@
             <p href="#" class="block font-mulish-normal text-12px font-semibold">Pendidikan</p>
             <p href="#" class="font-mulish-normal text-12px opacity-50">(2)</p>
             <button class="dropdown-btn">
-              <img src="../public/img/ic_arrow_down.png" alt="ic_arrow_down">
+              <img src="img/ic_arrow_down.png" alt="ic_arrow_down">
             </button>
           </span>
           <div class="flex space-x-4 bg-white mr-auto mt-3.75 justify-between border-b-0.5 border-alto-500">
             <button class="float-left w-9.5">
-              <img src="../public/img/ic_pendidikan.png" alt="ic_pendidikan">
+              <img src="img/ic_pendidikan.png" alt="ic_pendidikan">
             </button>
             <div class="container mx-auto pt-1.4">
               <p href="#" class="block font-mulish-normal text-12px font-semibold text-fuscous-gray-500 mt-4.5">Strata-1
@@ -174,12 +174,12 @@
                 2008</p>
             </div>
             <button class="float-right">
-              <img src="../public/img/ic_arrow_green.png" alt="ic_arrow_green" class="mr-7.5">
+              <img src="img/ic_arrow_green.png" alt="ic_arrow_green" class="mr-7.5">
             </button>
           </div>
           <div class="flex space-x-4 bg-white mr-auto mt-3.75 justify-between border-b-0.5 border-alto-500">
             <button class="float-left w-9.5">
-              <img src="../public/img/ic_pendidikan.png" alt="ic_pendidikan">
+              <img src="img/ic_pendidikan.png" alt="ic_pendidikan">
             </button>
             <div class="container mx-auto pt-1.4">
               <p href="#" class="block font-mulish-normal text-12px font-semibold text-fuscous-gray-500 mt-4.5">SMA</p>
@@ -187,14 +187,14 @@
                 2003</p>
             </div>
             <button class="float-right">
-              <img src="../public/img/ic_arrow_green.png" alt="ic_arrow_green" class="mr-7.5">
+              <img src="img/ic_arrow_green.png" alt="ic_arrow_green" class="mr-7.5">
             </button>
           </div>
 
           <span class="flex bg-white mr-auto mt-3.75 justify-between">
             <p href="#" class="block font-mulish-normal text-12px font-semibold">Data Perkiraan Pensiun</p>
             <button class="dropdown-btn">
-              <img src="../public/img/ic_arrow_down.png" alt="ic_arrow_down">
+              <img src="img/ic_arrow_down.png" alt="ic_arrow_down">
             </button>
           </span>
           <div class="container mx-auto pt-1.4">
