--- a/public/pribadi-nyangkut.html
+++ b/public/pribadi-nyangkut.html
@@ -14,7 +14,7 @@
   <nav class="flex items-center justify-between p-5 bg-chateau-green-500">
     <div class="flex items-center">
       <button>
-        <img src="img/Arrow.png" alt="arrow">
+        <img href="index.html" src="img/Arrow.png" alt="arrow">
       </button>
       <p href="#" class="text-base block text-white ml-5 font-mulish-normal">
         Data Diri
