--- a/public/keluarga.html
+++ b/public/keluarga.html
@@ -11,7 +11,7 @@
     <nav class="flex items-center justify-between p-5 bg-chateau-green-500">
         <div class="flex items-center">
           <button>
-            <img src="img/Arrow.png" alt="arrow">
+            <img href="index.html" src="img/Arrow.png" alt="arrow">
           </button>
           <a href="#" class="text-base block text-white ml-5 font-mulish-normal">
               Keluarga
