--- a/public/keluarga.html
+++ b/public/keluarga.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="flex items-center justify-between p-5 bg-chateau-green-500">
         <div class="flex items-center">
-          <button>
-            <img href="index.html" src="img/Arrow.png" alt="arrow">
-          </button>
+          <a href="index.html" >
+            <img src="img/Arrow.png" alt="arrow">
+          </a>
           <a href="#" class="text-base block text-white ml-5 font-mulish-normal">
               Keluarga
           </a>
