--- a/public/pribadi-nyangkut.html
+++ b/public/pribadi-nyangkut.html
@@ -13,9 +13,9 @@
 <body>
   <nav class="flex items-center justify-between p-5 bg-chateau-green-500">
     <div class="flex items-center">
-      <button>
-        <img href="index.html" src="img/Arrow.png" alt="arrow">
-      </button>
+      <a href="index.html">
+        <img  src="img/Arrow.png" alt="arrow">
+      </a>
       <p href="#" class="text-base block text-white ml-5 font-mulish-normal">
         Data Diri
       </p>
